[tool.poetry]
name = "flight-fidelity"
version = "0.1.0"
description = "data science porject to predict which fidelity card to choose"
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
jupyterlab = "^4.0.12"
pysqlite3 = "^0.5.2"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
streamlit = "^1.31.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
